--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Cascadia code NF SemiBold 13
+font pango:Hack Nerd Font 14
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -186,23 +186,27 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    position top
-    # mode hide
+    # position top
+    mode hide
     # tray_output primary
     # tray_output HDMI1
-    status_command i3status
-    modifier $mod+Shift
+    # status_command i3status
+    # modifier $mod+Shift
+    # colors {
+    #     focused_workspace #444444 #87d787
+    #     background #262626
+    # }
 }
 
 exec --no-startup-id "xset r rate 200 30"
 
 bindsym --release Shift+Print exec scrot -s -f \~/Pictures/%Y-%m-%d-%H%M%S.png
 
-
 bindsym --release Ctrl+Shift+Print exec scrot -s -f -o "/tmp/image.png" && xclip -selection clipboard -t image/png -i /tmp/image.png
 
+exec_always --no-startup-id feh --bg-scale /home/bacchimcho/Pictures/dejan-zakic-vnywo8u6d9c-unsplash.jpg
 
-exec_always --no-startup-id feh --bg-scale /home/bacchimcho/Pictures/a_girl_chim
+exec --no-startup-id xrdb -merge ~/.Xresources
 
 #file manager
 bindsym $mod+shift+f exec thunar
@@ -216,25 +220,33 @@ bindsym $mod+n bar mode toggle
 # Set the bar instance with id 'bar-1' to switch to hide mode
 bindsym $mod+b bar mode hide bar-1
 
+bindsym $mod+t border toggle
+
+# exec_always ~/.config/polybar/launch.sh & 
+
 # Set the bar instance with id 'bar-1' to always stay hidden
 bindsym $mod+Shift+b bar mode invisible bar-1
 
 bindsym $mod+g exec google-chrome
 
 #configure space between windows
-gaps inner 0px
-gaps outer 0px
-
+gaps inner 5px
+gaps outer 5px
 
 # # You can also use any non-zero value if you'd like to have a border
-# for_window [class=".*"] border pixel 1
+for_window [class=".*"] border pixel 4
+
 
 #set fcitx5 auto run in startup
 exec --no-startup-id fcitx5 -d
 
-# exec --no-startup-id xinput set-prop 11 "libinput Tapping Enabled" 1
+exec xinput set-prop "DLL0704:01 06CB:76AE Touchpad" "libinput Tapping Enabled" 1
 # exec --no-startup-id xinput set-prop 11 "libinput Natural Scrolling Enabled" 1
 
 
 #border color 
-# client.focused   #d7875f #d7875f #1c1c1c #d7875f
+# client.focused #6fcee5 #6fcee5 #6fcee5 #578493
+
+for_window [title="Battery Warning"] sticky enable
+
+# exec --no-startup-id compton
