--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -38,18 +38,18 @@ memory {
         format_degraded = "MEMORY: %free"
 }
 
-load {
-    format = "[ 🖥️ load: %1min, %5min, %15min ]"
-}
+# load {
+#     format = "[ 🖥️ load: %1min, %5min, %15min ]"
+# }
 
-disk /home {
-    format = "🗄️~ %free"
-}
+# disk /home {
+#     format = "🗄️~ %free"
+# }
 
-wireless _first_ {
-        format_up = "📶 %essid | %ip | (%quality, %bitrate)"
-        format_down = "W: down"
-}
+# wireless _first_ {
+#         format_up = "📶 %essid | %ip | (%quality, %bitrate)"
+#         format_down = "W: down"
+# }
 
 ethernet _first_ {
        # if you use %speed, i3status requires root privileges
