--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,44 +1,47 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:RGB"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
+# Navigation bindings
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-set -g status-bg black
-set -g status-fg white
-
-# resize the pane
+# Pane resizing
 bind-key -r J resize-pane -D 3
 bind-key -r K resize-pane -U 3
 bind-key -r H resize-pane -L 3
 bind-key -r L resize-pane -R 3
 
-# use vi mode
+# Vi mode
 setw -g mode-keys vi
 set -g status-keys vi
 
+# Split windows with current path
 unbind %
 bind '\' split-window -h -c '#{pane_current_path}'
-
 unbind '"'
-bind - split-window -v -c  '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
+# Mouse support
 set -g mouse on
 
-set-window-option -g mode-keys vi
-
+# Vi copy mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+set -g status-style bg=default
+
+set -g @onedark_widgets "#(date +%s)"
+
+set -g @onedark_time_format "%I:%M %p"
+
+set -g @onedark_date_format "%D"
+
+# Initialize TMUX plugin manager
 run '~/.tmux/plugins/tpm/tpm'
