--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -186,16 +186,16 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    # position top
-    mode hide
+    position top
+    # mode hide
     # tray_output primary
     # tray_output HDMI1
-    # status_command i3status
-    # modifier $mod+Shift
-    # colors {
-    #     focused_workspace #444444 #87d787
-    #     background #262626
-    # }
+    status_command i3status
+    modifier $mod+Shift
+    colors {
+        focused_workspace #444444 #87d787
+        background #262626
+    }
 }
 
 exec --no-startup-id "xset r rate 200 30"
