--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,24 +1,23 @@
 [general]
 live_config_reload = true
-import = ["~/.config/alacritty/themes/ondark.toml",]
 
 [env]
 TERM = "xterm-256color"
 
 [colors.primary]
-background = "#262626"
+background = "#1e1e2e"
 foreground = "#ffffff"
 
-[colors.cursor]
-text = "#000000" 
-cursor  = "#aeaeae"
+# [colors.cursor]
+# text = "#000000" 
+# cursor  = "#aeaeae"
 
 # cursor = "#6489ee"
 [window]
-padding.x = 0
-padding.y = 0
-# opacity = 0.85
-# blur = true
+padding.x = 2
+padding.y = 2
+opacity = 0.85
+blur = true
 # decorations = "None" 
 
 # [colors]
