--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Hack Nerd Font 14
+font pango:Hack Nerd Font 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -56,7 +56,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
-bindcode $mod+40 exec "rofi -show drun -theme $HOME/rofi-collection/dracula/dracula.rasi"
+bindcode $mod+40 exec "rofi -show drun -theme $HOME/rofi-collection/murz/murz.rasi"
 
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
@@ -188,16 +188,17 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    position top
-    mode hide
+    position bottom
+    # mode hide
     # tray_output primary
     # tray_output HDMI1
     status_command i3status
     modifier $mod+Mod1
     colors {
-        focused_workspace #181825 #89b4fa
-        background #285577
-        statusline #ffffff
+        focused_workspace #181825 #9b8c7e
+
+        # background #9b8c7e
+        statusline #9b8c7e
     }
 }
 
@@ -239,11 +240,11 @@ bindsym $mod+Shift+b bar mode invisible bar-1
 bindsym $mod+g exec firefox
 
 #configure space between windows
-gaps inner 5px
-gaps outer 5px
+# gaps inner 5px
+# gaps outer 5px
 
 # # You can also use any non-zero value if you'd like to have a border
-for_window [class=".*"] border pixel 1
+# for_window [class=".*"] border pixel 1
 
 #set fcitx5 run in startup
 exec --no-startup-id fcitx5 -d
@@ -252,7 +253,7 @@ exec xinput set-prop "DLL0704:01 06CB:76AE Touchpad" "libinput Tapping Enabled" 
 # exec --no-startup-id xinput set-prop 11 "libinput Natural Scrolling Enabled" 1
 
 #border color 
-# client.focused #6fcee5 #6fcee5 #6fcee5 #578493
+client.focused #9b8c7e #9b8c7e #181825 #9b8c7e
 
 for_window [title="Battery Warning"] sticky enable
 
