--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,7 +14,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-set-option -g status-position bottom
+set-option -g status-position top
 
 # Pane resizing
 bind-key -r J resize-pane -D 3
@@ -41,72 +41,65 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 
 # # Theme
-# set -g status-bg default
-# set -g status-style default
-# set -g status-fg colour27
-# set -g status-right-length 120
-# set -g status-left-length 50
 #
-# # Center the window list in the status line
-# set -g status-justify centre
 #
 # # Left status: session | battery | date and time
 # set -g status-left " #[bold]#S #[fg=#ffffff]| #{battery_percentage} | %FT%H:%M"
 
 # vim: ft=tmux
-set -g mode-style "fg=#ffffff,bg=#313244"
-
-set -g message-style "fg=#ffffff,bg=#313244"
-set -g message-command-style "fg=#ffffff,bg=#313244"
-
-set -g pane-border-style "fg=#313244"
-set -g pane-active-border-style "fg=#313244"
-
-set -g status "on"
-set -g status-interval 1
-set -g status-justify "left"
-
-set -g status-style "none"
-
-# set -g status-bg "none"
-
-set -g status-left-length "100"
-set -g status-right-length "100"
-
-set -g status-left-style NONE
-set -g status-right-style NONE
-
-set -g status-left "#[fg=#89b4fa,bg=#313244,bold] #S:#I.#P #[fg=#313244,bg=#89b4fa,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#89b4fa,bold] #(whoami) #[fg=#89b4fa,bg=#fab387]"
-set -g status-right "#[fg=#586e75,bg=#fab387,nobold,nounderscore,noitalics]#[fg=#89b4fa,bg=#586e75]#[fg=#657b83,bg=#586e75,nobold,nounderscore,noitalics]#[fg=#89b4fa,bg=#657b83]#[fg=#89b4fa,bg=#657b83,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#89b4fa,bold] #h "
-
-# setw -g window-status-activity-style "underscore,fg=#839496,bg=#fab387"
+# set -g mode-style "fg=#ffffff,bg=#313244"
+#
+# set -g message-style "fg=#ffffff,bg=#313244"
+# set -g message-command-style "fg=#ffffff,bg=#313244"
+#
+# set -g pane-border-style "fg=#313244"
+# set -g pane-active-border-style "fg=#313244"
+#
+# set -g status "on"
+# set -g status-interval 1
+# set -g status-justify "left"
+#
+# set -g status-style "none"
+#
+# # set -g status-bg "none"
+#
+# set -g status-left-length "100"
+# set -g status-right-length "100"
+#
+# set -g status-left-style NONE
+# set -g status-right-style NONE
+#
+# set -g status-left "#[fg=#89b4fa,bg=#313244,bold] #S:#I.#P #[fg=#313244,bg=#89b4fa,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#89b4fa,bold] #(whoami) #[fg=#89b4fa,bg=#fab387]"
+# set -g status-right "#[fg=#586e75,bg=#fab387,nobold,nounderscore,noitalics]#[fg=#89b4fa,bg=#586e75]#[fg=#657b83,bg=#586e75,nobold,nounderscore,noitalics]#[fg=#89b4fa,bg=#657b83]#[fg=#89b4fa,bg=#657b83,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#89b4fa,bold] #h "
+#
+# # setw -g window-status-activity-style "underscore,fg=#839496,bg=#fab387"
+# # setw -g window-status-separator ""
+# # setw -g window-status-style "NONE,fg=#839496,bg=#fab387"
+# # setw -g window-status-format '#[fg=none,bg=none]#[default] #I  (#{pane_current_command}) #[fg=none,bg=none,nobold,nounderscore,noitalics]'
+# # setw -g window-status-current-format '#[fg=#fab387,bg=#313244]#[fg=#a6e3a1,bg=#313244] #I #[fg=#313244,bg=#a6e3a1] #{b:pane_current_path} #[fg=#a6e3a1,bg=#fab387,nobold]'
+#
+#
+# # Window status activity
+# setw -g window-status-activity-style "underscore,fg=#bb9af7,bg=#1a1b26"
+#
+# # Window status separator
 # setw -g window-status-separator ""
-# setw -g window-status-style "NONE,fg=#839496,bg=#fab387"
-# setw -g window-status-format '#[fg=none,bg=none]#[default] #I  (#{pane_current_command}) #[fg=none,bg=none,nobold,nounderscore,noitalics]'
-# setw -g window-status-current-format '#[fg=#fab387,bg=#313244]#[fg=#a6e3a1,bg=#313244] #I #[fg=#313244,bg=#a6e3a1] #{b:pane_current_path} #[fg=#a6e3a1,bg=#fab387,nobold]'
-
-
-# Window status activity
-setw -g window-status-activity-style "underscore,fg=#bb9af7,bg=#1a1b26"
-
-# Window status separator
-setw -g window-status-separator ""
-
-# Window status style (cửa sổ không active)
-setw -g window-status-style "NONE,fg=#565f89,bg=#1a1b26"
-
-# Format cho cửa sổ thường
-setw -g window-status-format '#[fg=#1a1b26,bg=#1a1b26]#[fg=#565f89,bg=#1a1b26] #I  #{?pane_current_command,#[fg=#7aa2f7]#{pane_current_command},}#[fg=#565f89] #[fg=#1a1b26,bg=#1a1b26,nobold]'
-
-# Format cho cửa sổ hiện tại
-setw -g window-status-current-format '#[fg=#1a1b26,bg=#bb9af7]#[fg=#1a1b26,bg=#bb9af7] #I #[fg=#bb9af7,bg=#1a1b26] #[fg=#c0caf5]#{b:pane_current_path} #[fg=#1a1b26,bg=#1a1b26,nobold]'
-
-# Status line bên trái (session info)
-set -g status-left "#[fg=#1a1b26,bg=#7dcfff]  #S #[fg=#7dcfff,bg=#1a1b26]"
-set -g status-left-length 100
-
-# Status line bên phải (ngày giờ và thông tin hệ thống)
-set -g status-right "#[fg=#1a1b26,bg=#1a1b26]#[fg=#c0caf5,bg=#1a1b26] %H:%M #[fg=#9ece6a,bg=#1a1b26]#[fg=#1a1b26,bg=#9ece6a] %Y-%m-%d #[fg=#7dcfff,bg=#9ece6a]#[fg=#1a1b26,bg=#7dcfff]  #{cpu_percentage} #[fg=#bb9af7,bg=#7dcfff]#[fg=#1a1b26,bg=#bb9af7]  #{ram_percentage} "
+#
+# # Window status style (cửa sổ không active)
+# setw -g window-status-style "NONE,fg=#565f89,bg=#1a1b26"
+#
+# # Format cho cửa sổ thường
+# setw -g window-status-format '#[fg=#1a1b26,bg=#1a1b26]#[fg=#565f89,bg=#1a1b26] #I  #{?pane_current_command,#[fg=#7aa2f7]#{pane_current_command},}#[fg=#565f89] #[fg=#1a1b26,bg=#1a1b26,nobold]'
+#
+# # Format cho cửa sổ hiện tại
+# setw -g window-status-current-format '#[fg=#1a1b26,bg=#bb9af7]#[fg=#1a1b26,bg=#bb9af7] #I #[fg=#bb9af7,bg=#1a1b26] #[fg=#c0caf5]#{b:pane_current_path} #[fg=#1a1b26,bg=#1a1b26,nobold]'
+#
+# # Status line bên trái (session info)
+# set -g status-left "#[fg=#1a1b26,bg=#7dcfff]  #S #[fg=#7dcfff,bg=#1a1b26]"
+# set -g status-left-length 100
+#
+# # Status line bên phải (ngày giờ và thông tin hệ thống)
+# set -g status-right "#[fg=#1a1b26,bg=#1a1b26]#[fg=#c0caf5,bg=#1a1b26] %H:%M #[fg=#9ece6a,bg=#1a1b26]#[fg=#1a1b26,bg=#9ece6a] %Y-%m-%d #[fg=#7dcfff,bg=#9ece6a]#[fg=#1a1b26,bg=#7dcfff]  #{cpu_percentage} #[fg=#bb9af7,bg=#7dcfff]#[fg=#1a1b26,bg=#bb9af7]  #{ram_percentage} "
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -122,6 +115,17 @@ if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+
+set -g status-bg default
+set -g status-style default
+
+set -g status-fg "#9b8c7e"
+set -g status-right-length 120
+set -g status-left-length 50
+
+# Center the window list in the status line
+set -g status-justify centre
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
