--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Hack Nerd Font 12
+font pango:Iosevka 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -56,7 +56,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
-bindcode $mod+40 exec "rofi -show drun -theme $HOME/rofi-collection/murz/murz.rasi"
+bindcode $mod+40 exec "rofi -show drun -theme $HOME/rofi-collection/my-theme/my-theme.rasi"
 
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
@@ -110,6 +110,9 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
+
+#open setting GUI
+bindsym $mod+Shift+s exec xfce4-settings-manager
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -197,7 +200,7 @@ bar {
     colors {
         focused_workspace #181825 #9b8c7e
 
-        # background #9b8c7e
+        background #222222
         statusline #9b8c7e
     }
 }
