--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,6 @@ set -ga terminal-overrides ",xterm-256color:RGB"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-battery'
 
 set -sg escape-time 10 # or 0
 
@@ -14,7 +13,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-set-option -g status-position top
+set-option -g status-position bottom
 
 # Pane resizing
 bind-key -r J resize-pane -D 3
@@ -47,7 +46,7 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 # set -g status-left " #[bold]#S #[fg=#ffffff]| #{battery_percentage} | %FT%H:%M"
 
 # vim: ft=tmux
-# set -g mode-style "fg=#ffffff,bg=#313244"
+set -g mode-style "fg=#181825,bg=#9b8c7e"
 #
 # set -g message-style "fg=#ffffff,bg=#313244"
 # set -g message-command-style "fg=#ffffff,bg=#313244"
@@ -117,15 +116,24 @@ if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
 
-set -g status-bg default
-set -g status-style default
+set -g status-bg "#121212"
+# set -g status-style 
 
-set -g status-fg "#9b8c7e"
+# set -g status-fg "#9b8c7e"
+set -g status-fg "#999999"
 set -g status-right-length 120
 set -g status-left-length 50
 
 # Center the window list in the status line
 set -g status-justify centre
+
+# .tmux.conf
+# set -g focus-events on
+# set -g status-left '#(cat #{socket_path}-\#{session_id}-vimbridge)'
+# set -g status-left-length 99
+# set -g status-right '#(cat #{socket_path}-\#{session_id}-vimbridge-R)'
+# set -g status-right-length 99
+# set -g status-justify centre
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
