--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -222,7 +222,7 @@ bindsym $mod+Shift+w exec --no-startup-id feh --randomize --bg-fill /home/bacchi
 exec --no-startup-id xrdb -merge ~/.Xresources
 
 #file manager
-bindsym $mod+shift+f exec thunar
+bindsym $mod+shift+f exec nautilus
 
 # Toggle between hide state and show state
 # bindsym $mod+m bar hidden_state toggle
@@ -262,3 +262,9 @@ for_window [title="Battery Warning"] sticky enable
 
 exec --no-startup-id compton
 # exec --no-startup-id picom --config ~/.config/picom.conf -b
+
+for_window [window_type="dialog"] floating enable
+for_window [window_role="pop-up"] floating enable
+for_window [instance="galculator"] floating enable
+for_window [window_role="Preferences"] floating enable
+for_window [class="nautilus"] floating enable
