--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,6 +31,9 @@ bind '\' split-window -h -c '#{pane_current_path}'
 unbind '"'
 bind - split-window -v -c '#{pane_current_path}'
 
+# Source .tmux.conf as suggested in `man tmux`
+bind r source-file '/home/bacchimcho/.tmux.conf'
+
 # Mouse support
 set -g mouse on
 
