--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -5,7 +5,7 @@ live_config_reload = true
 TERM = "xterm-256color"
 
 [colors.primary]
-background = "#000000"
+background = "#262626"
 foreground = "#ffffff"
 
 [colors.cursor]
@@ -23,10 +23,10 @@ padding.y = 0
 # [colors]
 # transparent_background_colors = true 
 [font]
-normal = {family = "Iosevka", style = 'Regular'}
+normal = {family = "IosevkaTerm Nerd Font Mono", style = 'Regular'}
 size = 9
 
 [cursor.style] 
 shape = "Block"
-blinking = "Never"
+blinking = "Always"
 
