--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,9 +11,10 @@
 
 set $mod Mod4
 
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Iosevka 12
+font pango:Iosevka 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -215,14 +216,15 @@ bindsym --release Ctrl+Shift+Print exec scrot -s -f -o "/tmp/image.png" && xclip
 
 # exec_always --no-startup-id feh --bg-scale /home/bacchimcho/Wallpapers/kaguya-shinomiya-red-desktop-wallpaper.jpg
 # exec_always --no-startup-id feh --bg-scale /home/bacchimcho/Wallpapers/mikasa.jpg
+exec_always --no-startup-id feh --bg-scale /home/bacchimcho/Wallpapers/yellow-background.png
 
-bindsym $mod+Shift+w exec --no-startup-id feh --randomize --bg-fill /home/bacchimcho/Wallpapers
+# bindsym $mod+Shift+w exec --no-startup-id feh --randomize --bg-fill /home/bacchimcho/Wallpapers
 
 
 exec --no-startup-id xrdb -merge ~/.Xresources
 
 #file manager
-bindsym $mod+shift+f exec nautilus
+bindsym $mod+shift+f exec thunar
 
 # Toggle between hide state and show state
 # bindsym $mod+m bar hidden_state toggle
@@ -267,4 +269,7 @@ for_window [window_type="dialog"] floating enable
 for_window [window_role="pop-up"] floating enable
 for_window [instance="galculator"] floating enable
 for_window [window_role="Preferences"] floating enable
-for_window [class="nautilus"] floating enable
+for_window [title="thunar"] floating enable
+for_window [class="feh"] floating enable
+
+popup_during_fullscreen all
