--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -119,16 +119,17 @@ if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
 
-set -g status-bg "#121212"
+# set -g status-bg "#121212"
+# set -g status-bg "#262626"
 # set -g status-style 
 
 # set -g status-fg "#9b8c7e"
-set -g status-fg "#999999"
-set -g status-right-length 120
-set -g status-left-length 50
+# set -g status-fg "#999999"
+# set -g status-right-length 120
+# set -g status-left-length 50
 
 # Center the window list in the status line
-set -g status-justify centre
+# set -g status-justify centre
 
 # .tmux.conf
 # set -g focus-events on
@@ -137,6 +138,39 @@ set -g status-justify centre
 # set -g status-right '#(cat #{socket_path}-\#{session_id}-vimbridge-R)'
 # set -g status-right-length 99
 # set -g status-justify centre
+
+bg="#262626"
+default_fg="#abb2bf"
+session_fg="#98c379"
+selection_bg="#262626"
+selection_fg="#262626"
+active_pane_border="#abb2bf"
+active_window_fg="#61afef"
+
+# # Nord
+# bg="#3B4252"
+# default_fg="#d8dee9"
+# session_fg="#A3BE8C"
+# selection_bg="#A3BE8C"
+# selection_fg="#3B4252"
+# active_pane_border="#abb2bf"
+# active_window_fg="#81A1C1"
+
+set -g status-position bottom
+set -g status-left "#[fg=${session_fg},bold,bg=${bg}] #S"
+set -g status-right "#[fg=${default_fg},bg=${bg}] 󰃮 %Y-%m-%d 󱑒 %H:%M"
+set -g status-justify centre
+set -g status-left-length 200  # default: 10
+set -g status-right-length 200 # default: 10
+set-option -g status-style bg=${bg}
+set -g window-status-current-format "#[fg=${active_window_fg},bg=default]  #I:#W"
+set -g window-status-format "#[fg=${default_fg},bg=default] #I:#W"
+set -g window-status-last-style "fg=${default_fg},bg=default"
+set -g message-command-style bg=default,fg=${default_fg}
+set -g message-style bg=default,fg=${default_fg}
+set -g mode-style bg=${selection_bg},fg=${selection_fg}
+set -g pane-active-border-style "fg=${active_pane_border},bg=default"
+set -g pane-border-style 'fg=brightblack,bg=default'
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
